
. js 3rd party libs update
* updated to jQuery 3.6.0
* updated to echart 5.1.1
* updated to fontawesome 5.15.3
* updated to bootstrap 4.6.0 
* updated to doT 1.1.3
* updated to d3-format 1.4.5
* updated to filesaver 2.0.4
* updated to modernizr 3.5.0
* updated to nouislider 15.0.0
* updated to webcomponentsjs 1.3.3
* updated to log4javascript 1.4.16

.Incompatibilities:
* due to a security fix in latest jQuery, be sure you don't use self closing html elements in jQuery.append()/etc. (Example: <span/> -> <span></span>)
* projects need to update to log4j2 jars and adjust log4j.properties
* echart uses new default colors, ensure to set colors in your projects and don't rely on default coloring
* due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar


==== Release 5_4_0

.Major new features:

. Support for ECMA6
* Introduced Babel to transpile for usage in Internet Explorer
* Adjusted js loader for IE
* Using 'strict' mode now in all JS sources
* updated to jQuery 3.4.1, jQuery-UI 1.12.1

. Components: Scorecard, Cube, Charts, Export, Grid, Tree
* Added Grid Component
* Added Tree Component
* Added collapse/expand functionaly to cubes
* Reorganized CubeContextMenu and added hard toggle column sort
* Charts support for dark themes
* Charts removed some chart background grid elements for less crowded charts
* Charts add support for echarts when loading bcduiChart2, image export and some chart types are limitted
* Add support for radar chart when using it
* Cube allows dims-only and measure-only reports, for measure only, you can decide if the data should be aggregated or not
* Cube DND flyover when specifying @description on LevelRef and Measure nodes
* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.