@@ -27,11 +27,15 @@ Some changes are backward incompatible and may require code change in the projec
 * updated to webcomponentsjs 1.3.3
 * updated to log4javascript 1.4.16
 
+* updated dependency jars
+
 .Incompatibilities:
 * due to a security fix in latest jQuery, be sure you don't use self closing html elements in jQuery.append()/etc. (Example: <span/> -> <span></span>)
 * projects need to update to log4j2 jars and adjust log4j.properties
 * echart uses new default colors, ensure to set colors in your projects and don't rely on default coloring
 * due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar
+* add the following to your shiro main settings in web.xml: invalidRequest.blockSemicolon = false
+* ensure to update dependency jars
 
 
 ==== Release 5_4_0
